test/tests/stages/10_file-scope_variables_and_storage-class_specifiers/valid/libraries/external_tentative_var.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[13]:
  int
  identifier(x)
  ;
  int
  identifier(read_x)
  (
  void
  )
  {
  return
  identifier(x)
  ;
  }
