test/tests/stages/10_file-scope_variables_and_storage-class_specifiers/invalid_parse/extra_credit/extern_label.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[13]:
  int
  identifier(main)
  (
  void
  )
  {
  extern
  identifier(a)
  :
  return
  const int(1)
  ;
  }
